turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:23: error: not found: value etat
	rule(etat)(couleurActuelle)(MVT_SUIVANT) match
             ^